--- a/index_QN.html
+++ b/index_QN.html
@@ -456,7 +456,7 @@ var width = $("#map").width(),
 	
 
 	function zoomFullExtent(){
-		map.setView([40.713312, -73.977407], 14);
+		map.setView([40.71836920690928, -73.80943526674864], 15);
 		var u2=document.querySelector(".zoomedPoint");
 		if (u2) {
 			u2.className.baseVal = u2.className.baseVal.replace(/\bzoomedPoint\b/g, "");
